# toka

./: .gitignore  AGENT.md  BUILDER.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  OPCODES.md  README.md  SCAFFOLD.md  SUMMARY.md  build.sh  dev.sh  output.ppm  stop.sh  test_capsule_load.rs  test_scalar.rs
benches/: rect.rs
examples/: api_comparison.rs  box.rs  builder_demo.rs  debug_vsf_colours.rs  fgtw_gen.rs  gen_loom_bytecode.rs  gen_test_capsules.rs  loom_demo.rs  reactive.rs  test_vsf_colours.rs  test_white_rect.rs  test_white_square.rs  text_align.rs
src/: builder.rs  bytecode.rs  canvas.rs  capsule.rs  lib.rs  loom.rs  main.rs  opcode.rs  renderer.rs  value.rs  vm.rs
src/drawing/: canvas_fast.rs  canvas_quality.rs  circle_fast.rs  circle_quality.rs  line.rs  mod.rs  pixel_quality.rs  rect_fast.rs  rect_quality.rs  shared.rs  text_fast.rs  text_quality.rs  triangle_fast.rs  triangle_quality.rs
www/: README.md  app.js  fgtw.html  fgtw.vsf  index.html  serve.sh  test.html
www/capsules/: blue_circle_test.vsf  bluecircle.vsf  green_box_test.vsf  greenbox.vsf  red_box_test.vsf  redbox.vsf
