[package]
name = "toka"
version = "0.0.0"
edition = "2021"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
description = "Capability-bounded stack VM for secure distributed computing"
repository = "https://github.com/nickspiker/toka"
license = "MIT OR Apache-2.0"
keywords = ["vm", "capability", "spirix", "vsf", "bytecode"]
categories = ["no-std", "wasm", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "toka"
path = "src/main.rs"

[dependencies]
# Core dependencies for deterministic computation
spirix = { version = "0.0.6", path = "../spirix" }
vsf = { version = "0.2.3", path = "../vsf", default-features = false, features = ["spirix"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2"
# web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }

[dev-dependencies]

[features]
default = []
