[package]
name = "toka"
version = "0.0.0"
edition = "2021"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
description = "Capability-bounded stack VM for secure distributed computing"
repository = "https://github.com/nickspiker/toka"
license = "MIT OR Apache-2.0"
keywords = ["vm", "capability", "spirix", "vsf", "bytecode"]
categories = ["no-std", "wasm", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "toka"
path = "src/main.rs"

[dependencies]
# Core dependencies for deterministic computation
spirix = { version = "0.0.6", path = "../spirix" }
vsf = { version = "0.2.3", path = "../vsf", default-features = false, features = ["spirix", "crypto"] }

# getrandom with WASM support - Both 0.2 (js) and 0.3 (wasm_js) are used by dependencies
# We need to explicitly enable WASM features for both versions
[dependencies.getrandom-02]
package = "getrandom"
version = "0.2"
features = ["js"]

[dependencies.getrandom-03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData", "console"] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
